Fixed color on tablet hero overlay background. https://tracker.nci.nih.gov/browse/OCEPROJECT-2903

--- a/CancerGov/_src/StyleSheets/mediaqueries/medium-down.scss
+++ b/CancerGov/_src/StyleSheets/mediaqueries/medium-down.scss
@@ -559,7 +559,7 @@
 		position: absolute;
 		bottom: 0;
 		color: white;
-		background-color: rgba(51, 102, 153, 0.5);
+		background-color: rgba(10, 21, 28, 0.8);
 		font-size: 1.2em;
 		font-weight: bold;
 		width: 100%;
